--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ phone: Your phone number (optional)
 website: https://jordan-kasper.github.io/
 
 # Social links
-github_username:  jekyll
-linkedin_username: jekyll
+github_username:  jordan-kasper
+linkedin_username: jordan-kasper-204a7048
 
 # About Section
 # about_title: About Me (Use this to override about section title)
