updating experience url

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -11,7 +11,7 @@
 
 - layout: left
   company: Janrain (Akamai CIAM)
-  link: https://www.akamai.com/us/en/solutions/security/customer-identity-and-access-management.jsp
+  link: https://www.akamai.com
   job_title: Senior Technical Support Engineer
   dates: Date Range (eg. November 2015 - Sept 2017)
   quote: >
