adding certification to education

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -8,3 +8,12 @@
   description: | # this will include new lines to allow paragraphs
     Students in computer science will learn to design and develop software systems for industrial, scientific, commercial and educational applications. They will acquire an understanding of programming, analysis, data structures, algorithms and operating systems. Graduates will be prepared to work in the private or public sector, or to proceed to advanced study.
     
+- layout: left
+  name: IBM Data Science Professional Certifcate
+  dates: August 26, 2019
+  qualification: https://www.coursera.org/account/accomplishments/professional-cert/VL38UT7UTH8N
+  quote: >
+    This Professional Certificate from IBM is intended for anyone interested in developing skills and experience to pursue a career in Data Science or Machine Learning.
+  description: | # this will include new lines to allow paragraphs
+    This program consists of 9 courses providing you with latest job-ready skills and techniques covering a wide array of data science topics including: open source tools and libraries, methodologies, Python, databases, SQL, data visualization, data analysis, and machine learning. You will practice hands-on in the IBM Cloud using real data science tools and real-world data sets.
+    
