shortening URL for cert

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -11,7 +11,7 @@
 - layout: left
   name: IBM Data Science Professional Certifcate
   dates: August 26, 2019
-  qualification: https://www.coursera.org/account/accomplishments/professional-cert/VL38UT7UTH8N
+  qualification: https://bit.ly/2ovPiro
   quote: >
     This Professional Certificate from IBM is intended for anyone interested in developing skills and experience to pursue a career in Data Science or Machine Learning.
   description: | # this will include new lines to allow paragraphs
