--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -22,7 +22,7 @@
     - Sklearn
     - numpy
 
-- layout: left (options: left, right, top, top-right, top-middle)
+- layout: top-middle
   name: Project name
   link: Link to project (eg. https://sproogen.github.io/modern-resume-theme)(optional)
   github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
