--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -24,10 +24,10 @@
 
 - layout: top-middle
   name: Project name
-  link: Link to project (eg. https://sproogen.github.io/modern-resume-theme)(optional)
-  github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
+  link: Link to project (eg. jordan-kasper.github.io/pig-game-js)
+  github: Github page for project (eg. jordan-kasper/pig-game-js)
   quote: >
-    Short overview of the project (optional)
+    A JavaScript game built using basic JS, HTML and CSS.  Used to showcase basic knowlege of JS.
   description: | # this will include new lines to allow paragraphs
-    Description about the work on/with the project
+    A simple game for two players where you try to get to 100 points first.  Each player rolls the dice and adds up the numbers they roll.  If a player rolls a 1 they lose their points for the round and its the next players turn.  They can hold their points and add to their score but their turn is over and its the next players turn.
 
