--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -17,3 +17,11 @@
   description: | # this will include new lines to allow paragraphs
     A simple game for two players where you try to get to 100 points first.  Each player rolls the dice and adds up the numbers they roll.  If a player rolls a 1 they lose their points for the round and its the next players turn.  They can hold their points and add to their score but their turn is over and its the next players turn.
 
+- layout: top-middle
+  name: Queue Managment Dashboard 
+  link: https://queue-manager-dashboard.firebaseapp.com/
+  github: https://github.com/jordan-kasper/queue-manager-dashboard
+  quote: >
+    A JavaScript dashboard built to manage ticket queues for agents
+  description: | # this will include new lines to allow paragraphs
+    A dashboard that is built with Javascript and firebase to track ticket queues and manager ticket load for support agents.
