--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -18,7 +18,7 @@
     A simple game for two players where you try to get to 100 points first.  Each player rolls the dice and adds up the numbers they roll.  If a player rolls a 1 they lose their points for the round and its the next players turn.  They can hold their points and add to their score but their turn is over and its the next players turn.
 
 - layout: top-middle
-  name: Queue Managment Dashboard 
+  name: Queue Managment Dashboard (In Progress)
   link: https://queue-manager-dashboard.firebaseapp.com/
   github: https://github.com/jordan-kasper/queue-manager-dashboard
   quote: >
